[gd_scene load_steps=16 format=3 uid="uid://c15j4siq01eip"]

[ext_resource type="Texture2D" uid="uid://cq7y6l812dlk0" path="res://assets/Bg.png" id="1_ik6sa"]
[ext_resource type="Script" uid="uid://cionnywuae4w8" path="res://scenes/pong.gd" id="2_ploue"]
[ext_resource type="FontFile" uid="uid://cpjy8xrn06dk0" path="res://assets/pixel_font.ttf" id="3_60vo6"]
[ext_resource type="Script" uid="uid://dfln6a6nl2qph" path="res://scenes/player.gd" id="3_ploue"]
[ext_resource type="Script" uid="uid://dx4tcg1hf2s5y" path="res://scenes/cpu.gd" id="4_7aeas"]
[ext_resource type="Script" uid="uid://bkgrpk565g6pp" path="res://scenes/ball.gd" id="4_60vo6"]
[ext_resource type="PackedScene" uid="uid://bumfdi7h6lgix" path="res://scenes/pause_menu.tscn" id="6_1gkem"]
[ext_resource type="AudioStream" uid="uid://c0pynmc0jtp61" path="res://assets/PongWall.wav" id="8_7q0or"]
[ext_resource type="AudioStream" uid="uid://cauf5k0utmipw" path="res://assets/PongPaddle.wav" id="9_me32k"]
[ext_resource type="AudioStream" uid="uid://d2txn2dr3l4gx" path="res://assets/PongScore.wav" id="10_jjrnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5tya"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eipaa"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ludyb"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trlu6"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6iag"]
size = Vector2(64, 648)

[node name="Pong" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_ik6sa")
centered = false
script = ExtResource("2_ploue")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_ploue")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_m5tya")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_7aeas")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_m5tya")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(578.5, 324)
collision_mask = 3
script = ExtResource("4_60vo6")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.788252, 0.0921481, 0.168186, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(-2.5, -2.5)
shape = SubResource("RectangleShape2D_eipaa")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_ludyb")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_trlu6")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_a6iag")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_a6iag")

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource("6_1gkem")]

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("3_60vo6")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("3_60vo6")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SfxPongWall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7q0or")

[node name="SfxPongPaddle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_me32k")

[node name="SfxPongScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_jjrnv")

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
